<resources>
    <string name="app_name">Landjugend</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="tauschboerse">Tauschbörse</string>
    <string name="events">Veranstaltungen</string>
    <string name="infos">Infos</string>
    <string name="new_info">Neue Info</string>
    <string name="login">Anmelden</string>
    <string name="logout">Abmelden</string>
    <string name="register">Registrieren</string>
    <string name="offers">Angebote</string>
    <string name="requests">Anfragen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="send">Absenden</string>
    <string name="new_info_hint">Hier können neue Infos eingereicht werden.</string>
    <string name="description">Beschreibung</string>
    <string name="password">Passwort</string>
    <string name="username">Benutzername</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="email">E-Mail</string>
    <string name="email_confirm">E-Mail bestätigen</string>
    <string name="password_confirm">Passwort bestätigen</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_info_title">Titel eintragen</string>
    <string name="new_exchange">Neuer Tauschbörseneintrag</string>
    <string name="solved">Gelöst</string>
    <string name="dialog_msg_solved">Wurde dein Fall gelöst?</string>
    <string name="dialog_title_solved">Gelöst?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="eventWebsite">Webseite</string>
    <string name="edit">Ändern</string>
    <string name="oldPassword">Aktuelles Passwort</string>
    <string name="editUser">Profil bearbeiten</string>

    <string name="appkeyweb">123456</string>
</resources>
